feat(navigator): ✨ implement warps command for build teams and enhance warp menu access